{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 1493,
  "lineage": "e18d3624-d925-0fd5-6c84-279ac2f93d24",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:security-group/sg-03cbbe0544205f3c4",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-03cbbe0544205f3c4",
            "ingress": [],
            "name": "ido-pacman-cluster-cluster-20240828094341133000000008",
            "name_prefix": "ido-pacman-cluster-cluster-",
            "owner_id": "982534373075",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-cluster"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:security-group/sg-0de78cb32da56e693",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0de78cb32da56e693",
            "ingress": [],
            "name": "ido-pacman-cluster-node-2024082809434266400000000b",
            "name_prefix": "ido-pacman-cluster-node-",
            "owner_id": "982534373075",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-node",
              "kubernetes.io/cluster/ido-pacman-cluster": "owned"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-node",
              "kubernetes.io/cluster/ido-pacman-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1852423658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03cbbe0544205f3c4",
            "security_group_rule_id": "sgr-0301db233950ac8f5",
            "self": false,
            "source_security_group_id": "sg-0de78cb32da56e693",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2548355898",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0de78cb32da56e693",
            "security_group_rule_id": "sgr-07fb2acbabf04b9cd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3361075760",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0de78cb32da56e693",
            "security_group_rule_id": "sgr-06bcef47ffe1336f3",
            "self": false,
            "source_security_group_id": "sg-03cbbe0544205f3c4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3109302700",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0de78cb32da56e693",
            "security_group_rule_id": "sgr-098c260109f7ec04b",
            "self": false,
            "source_security_group_id": "sg-03cbbe0544205f3c4",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1880512058",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0de78cb32da56e693",
            "security_group_rule_id": "sgr-0974d2857617438c9",
            "self": false,
            "source_security_group_id": "sg-03cbbe0544205f3c4",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1665821211",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0de78cb32da56e693",
            "security_group_rule_id": "sgr-0c25ff3397a4d2891",
            "self": false,
            "source_security_group_id": "sg-03cbbe0544205f3c4",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-132864464",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0de78cb32da56e693",
            "security_group_rule_id": "sgr-02f438040fbf09233",
            "self": false,
            "source_security_group_id": "sg-03cbbe0544205f3c4",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3719020863",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0de78cb32da56e693",
            "security_group_rule_id": "sgr-04ebf8e826c9bf72e",
            "self": false,
            "source_security_group_id": "sg-03cbbe0544205f3c4",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2472320382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0de78cb32da56e693",
            "security_group_rule_id": "sgr-082d981c09dfcc195",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3169933939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0de78cb32da56e693",
            "security_group_rule_id": "sgr-020414bf91472f639",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-414120348",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0de78cb32da56e693",
            "security_group_rule_id": "sgr-025f85cd9c3241f8a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:network-acl/acl-0d5159643adee7c72",
            "default_network_acl_id": "acl-0d5159643adee7c72",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d5159643adee7c72",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "982534373075",
            "subnet_ids": [
              "subnet-04574cd63735a7792",
              "subnet-05ffbca9215dae6b3",
              "subnet-06c7ee9c69194baa3",
              "subnet-088183feb1e496d26",
              "subnet-08bcd1a8f61a2179a",
              "subnet-0e8cbb228c8374550"
            ],
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-default"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-default"
            },
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:route-table/rtb-0b0f0958a4e55fe88",
            "default_route_table_id": "rtb-0b0f0958a4e55fe88",
            "id": "rtb-0b0f0958a4e55fe88",
            "owner_id": "982534373075",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-default"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:security-group/sg-02df37e8198d85297",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02df37e8198d85297",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "982534373075",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-default"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-default"
            },
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3e7586664d0ff4d",
            "arn": "arn:aws:ec2:us-west-2:982534373075:elastic-ip/eipalloc-0e3e7586664d0ff4d",
            "domain": "vpc",
            "id": "eipalloc-0e3e7586664d0ff4d",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-215-134-28.us-west-2.compute.amazonaws.com",
            "public_ip": "34.215.134.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-us-west-2a"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-us-west-2a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039029d83946b3b37",
            "arn": "arn:aws:ec2:us-west-2:982534373075:elastic-ip/eipalloc-039029d83946b3b37",
            "domain": "vpc",
            "id": "eipalloc-039029d83946b3b37",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-208-127-162.us-west-2.compute.amazonaws.com",
            "public_ip": "34.208.127.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-us-west-2b"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-us-west-2b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:internet-gateway/igw-0a1f19285e3becf88",
            "id": "igw-0a1f19285e3becf88",
            "owner_id": "982534373075",
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster"
            },
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3e7586664d0ff4d",
            "association_id": "eipassoc-0e9304a54ace0268d",
            "connectivity_type": "public",
            "id": "nat-024dda4dc33a2ac52",
            "network_interface_id": "eni-0e4aabfe4d6212678",
            "private_ip": "10.123.1.73",
            "public_ip": "34.215.134.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05ffbca9215dae6b3",
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-us-west-2a"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-us-west-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039029d83946b3b37",
            "association_id": "eipassoc-02fa08b0c872f90e2",
            "connectivity_type": "public",
            "id": "nat-0e150da3ec1105442",
            "network_interface_id": "eni-00c7dac3ec513fcdb",
            "private_ip": "10.123.2.17",
            "public_ip": "34.208.127.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e8cbb228c8374550",
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-us-west-2b"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-us-west-2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bb554fe9355288311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-024dda4dc33a2ac52",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bb554fe935528831",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-034e198727e19d1511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e150da3ec1105442",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-034e198727e19d151",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a1f19285e3becf88",
            "id": "r-rtb-034eec8f5a8d5ac671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-034eec8f5a8d5ac67",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:route-table/rtb-04f799faba2d823d0",
            "id": "rtb-04f799faba2d823d0",
            "owner_id": "982534373075",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-intra"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:route-table/rtb-0bb554fe935528831",
            "id": "rtb-0bb554fe935528831",
            "owner_id": "982534373075",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-private-us-west-2a"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:route-table/rtb-034e198727e19d151",
            "id": "rtb-034e198727e19d151",
            "owner_id": "982534373075",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-private-us-west-2b"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-private-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:route-table/rtb-034eec8f5a8d5ac67",
            "id": "rtb-034eec8f5a8d5ac67",
            "owner_id": "982534373075",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-public"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002d95e42082afe1f",
            "route_table_id": "rtb-04f799faba2d823d0",
            "subnet_id": "subnet-04574cd63735a7792"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0456dfdbf0d4a9d8f",
            "route_table_id": "rtb-04f799faba2d823d0",
            "subnet_id": "subnet-088183feb1e496d26"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0999aaccfd9271496",
            "route_table_id": "rtb-0bb554fe935528831",
            "subnet_id": "subnet-08bcd1a8f61a2179a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041e18a35e1881a1a",
            "route_table_id": "rtb-034e198727e19d151",
            "subnet_id": "subnet-06c7ee9c69194baa3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dfe701f307ef307",
            "route_table_id": "rtb-034eec8f5a8d5ac67",
            "subnet_id": "subnet-05ffbca9215dae6b3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085dd62c1a2706972",
            "route_table_id": "rtb-034eec8f5a8d5ac67",
            "subnet_id": "subnet-0e8cbb228c8374550"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:subnet/subnet-04574cd63735a7792",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.123.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04574cd63735a7792",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534373075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-intra-us-west-2a"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-intra-us-west-2a"
            },
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:subnet/subnet-088183feb1e496d26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.123.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088183feb1e496d26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534373075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-intra-us-west-2b"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-intra-us-west-2b"
            },
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:subnet/subnet-08bcd1a8f61a2179a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.123.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bcd1a8f61a2179a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534373075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-private-us-west-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-private-us-west-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:subnet/subnet-06c7ee9c69194baa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.123.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c7ee9c69194baa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534373075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-private-us-west-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-private-us-west-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:subnet/subnet-05ffbca9215dae6b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ffbca9215dae6b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534373075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:subnet/subnet-0e8cbb228c8374550",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8cbb228c8374550",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982534373075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f87015904cd40a9d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:982534373075:vpc/vpc-0f87015904cd40a9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0d5159643adee7c72",
            "default_route_table_id": "rtb-0b0f0958a4e55fe88",
            "default_security_group_id": "sg-02df37e8198d85297",
            "dhcp_options_id": "dopt-00097261e07d028c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f87015904cd40a9d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0f0958a4e55fe88",
            "owner_id": "982534373075",
            "tags": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster"
            },
            "tags_all": {
              "Author": "Ido Assaraf",
              "Name": "ido-pacman-cluster"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}